<?xml version="1.0"?>
<package format="3">
  <name>gps_publisher</name>
  <version>0.1.0</version>
  <description>Package for managing GPS and yaw data.</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
